fix(css): adjust selector to target only the last section
Updated CSS to ensure .category-link applies only to the last
section element. This change prevents unintended styling of
elements in other sections, enhancing the page's visual accuracy. Fixes #30.

--- a/src/wikimore/static/css/style.css
+++ b/src/wikimore/static/css/style.css
@@ -206,7 +206,7 @@ h1 {
     text-align: center;
 }
 
-section>.category-link {
+section:last-child>.category-link {
     display: inline;
     font-size: 0.8em;
 }
