--- a/src/wikimore/static/css/style.css
+++ b/src/wikimore/static/css/style.css
@@ -904,6 +904,21 @@ span {
     display: none;
 }
 
+/* Wikinews comments request
+
+Currently blocked by implementation of comments retrieval in the backend
+
+#commentrequest {
+    display: inline-block !important;
+    font-size: 0;
+}
+
+#commentrequest a::after {
+    content: "View comments section";
+    font-size: 1rem;
+}
+*/
+
 /* Media query for devices with a max width of 768px */
 @media (max-width: 768px) {
     #header {
