fix: update search placeholder text
Changed the placeholder text from "Search Wikipedia" to "Search Wiki" to prevent confusion if a different project was selected.

Ref: #18

--- a/src/wikimore/templates/base.html
+++ b/src/wikimore/templates/base.html
@@ -20,7 +20,7 @@
                 <option {% if key == lang %}selected="selected"{% endif %} value="{{ key }}">{{ value["name"] }}</option>
             {% endfor %}
             </select>
-            <input type="text" name="query" id="query" placeholder="Search Wikipedia">
+            <input type="text" name="query" id="query" placeholder="Search Wiki">
             <button type="submit">Search</button>
         </form>
     </div>
