feat: display license information on article page
Added functionality to fetch and display license information for wiki
articles. This enhancement provides users with clarity on content usage
permissions by showing a link to the article's license in the footer.

Fixes #35.

--- a/src/wikimore/templates/article.html
+++ b/src/wikimore/templates/article.html
@@ -4,3 +4,9 @@
     <h1 class="title{% if rtl %} title-rtl{% endif %}">{{ title }}</h1>
     {{ content|safe }}
 {% endblock %}
+
+{% block license %}
+{% if license %}
+    <p class="license">This content is licensed under the <a href="{{ license.url }}">{{ license.title }}</a>.</p>
+{% endif %}
+{% endblock %}
