--- a/src/wikimore/templates/base.html
+++ b/src/wikimore/templates/base.html
@@ -28,6 +28,7 @@
         {% block content %}{% endblock %}
     </div>
     <div id="footer">
+        {% block license %}{% endblock %}
         <p>Brought to you by <a href="https://git.private.coffee/privatecoffee/wikimore">Wikimore</a>, a <a href="https://private.coffee">Private.coffee</a> project</p>
     </div>
 </body>
